# portfolio_platform

./: .env.example  .gitignore  README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  pyproject.toml
.antigravity/: coding_standards.md  instructions.md  workflow_recipes.md
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/src/: config.py  main.py
backend/src/db/: database.py  db_communication.py  db_invite.py  db_invoice.py  db_project.py  db_user.py  models.py  reset_db.py  seed.py
backend/src/routers/: communications.py  invites.py  invoices.py  projects.py
backend/src/routers/users/: __init__.py  user.py  user_get.py  user_post.py
backend/src/schemas/: communication_schema.py  invite_schema.py  invoice_schema.py  project_schema.py  user_schema.py
backend/src/utils/auth_service/: authentication.py  hash.py  oauth2_util.py
backend/src/utils/pydantic/: __init__.py  generate_partial_model.py
backend/tests/db/: test_database.py
db/: edw_platform.sql
docs/: ARCHITECTURE.md
docs/design_docs/: 00_milestone_summary.md  01_core_platform_scaffolding.md  02_module_import_resolution.md  03_home_and_about_features.md  04_dynamic_layout_integration.md  05_login_page_alignment.md  06_admin_dashboard_overhaul.md  07_cicd_and_containerization.md  08_authentication_modernization.md  09_cloud_run_deployment_fixes.md  (+11 more)
frontend/: Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json
scratch/: check_db.py  reset_db.py  test_register_crash.py  test_register_duplicate.py  test_register_success.py
(+56 files in other folders)
